[package]
name = "twitter_privacy"
version = "0.1.0"
authors = ["Pere Villega <pvillega@aracon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
dotenv = "0.13.0" # Manage .env files
log = "0.4" # logger
pretty_env_logger = "0.3.0" # logger to std err on top of `log`
egg-mode = "0.12.0" # twitter api in Rust
tokio-core = "0.1" # async library for network requests required by egg_mode. Beware it is an old lib, superseeded by 'tokio'. Newer egg_mode will update accordingly.
chrono = "0.4" # Datetime library for date manipulation